# python-project-template

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  env_generation.py  main.py  pre-commit-hook.sh  pyproject.toml
app/: crypto.py  database_interface.py  env_manipulation.py  logger.py  main.py  mattermost_notification.py  pandas_aggregation_techniques.py  webex_notification.py
tests/: test_crypto.py
