[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = """
Project development standards for new python projects as working with theStygianArchitect."""
authors = ["The Stygian Architect <thestygianarchitect@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
json-log-formatter = "^0.3.0"
cryptography = "^2.9"
orjson = "^3.0.0"
ujson = "^2.0.3"
fastapi = {extras = ["all"], version = "^0.54.1"}
pydantic = "^1.5.1"
sqlalchemy = "^1.3.16"
python-tds = "^1.10.0"
sqlalchemy-pytds = "^0.3"
pyOpenSSL = "^19.1.0"
pandas = "^1.0.3"
psycopg2-binary = "^2.8.5"
pymysql = "^0.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pylint = "^2.4.4"
pycodestyle = "^2.5.0"
pydocstyle = "^5.0.2"
mypy = "^0.770"
bandit = "^1.6.2"
safety = "^1.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
